--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="overlay"></div>
         <div id="center">
             <p style="font-size:24px;">sven1027</p>
-            <p style="font-size:16px;"><a href="http://steamcommunity.com/profiles/76561199436196844" target="_blank">steam</a> / <a href="https://discordapp.com/users/718103996971352133" target="_blank">discord</a> / <a href="https://github.com/sven1027" target="_blank">github</a> / <a href="https://www.twitch.tv/svenbaapman" target="_blank">twitch</a> / <a href="https://open.spotify.com/user/svenmiow" target="_blank">spotify</a></p>
+            <p style="font-size:16px;"><a href="http://steamcommunity.com/profiles/76561199436196844" target="_blank">steam</a> / <a href="https://discordapp.com/users/718103996971352133" target="_blank">discord</a> / <a href="https://open.spotify.com/user/svenmiow" target="_blank">spotify</a></p>
         </div>
     </body>
 </html>
